fix some layout issues after changing to Bootstrap

--- a/src/app/heroes/heroes.component.css
+++ b/src/app/heroes/heroes.component.css
@@ -14,10 +14,19 @@
     left: 0;
     background-color: #EEE;
     margin: .5em;
-    padding: .3em 0;
-    height: 1.6em;
+    line-height: 1.5em;
     border-radius: 4px;
+    display: flex;
+    align-items: stretch;
   }
+
+  .heroes li .name{
+    flex-grow: 1;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
   .heroes li.selected:hover {
     background-color: #BBD8DC !important;
     color: white;
@@ -32,17 +41,13 @@
     top: -3px;
   }
   .heroes .badge {
-    display: inline-block;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     font-size: small;
+    min-width: 2em;
     color: white;
-    padding: 0.8em 0.7em 0 0.7em;
     background-color: #607D8B;
-    line-height: 1em;
-    position: relative;
-    left: -1px;
-    top: -4px;
-    height: 1.8em;
-    margin-right: .8em;
     border-radius: 4px 0 0 4px;
   }
 
@@ -60,9 +65,7 @@ button:hover {
 }
 
 button.delete {
-  float:right;
-  margin-top: 2px;
-  margin-right: .8em;
   background-color: gray !important;
   color:white;
+  border-radius: 0 4px 4px 0;
 }
